// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Result component renders correctly 1`] = `
<div>
  <table>
    <tbody>
      <tr
        class="episode-row"
      >
        <td
          class="episode-title-cell"
        >
          <button
            aria-label="Play episode: Test Episode Title"
            class="episode-title"
            type="button"
          >
            Test Episode Title
          </button>
        </td>
        <td
          class="date-column"
        >
          <time
            datetime="2023-05-15T12:00:00Z"
          >
            May 15, 2023
          </time>
        </td>
        <td
          class="duration-column"
        >
          01:00:00
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Result component renders with empty duration and date 1`] = `
<div>
  <table>
    <tbody>
      <tr
        class="episode-row"
      >
        <td
          class="episode-title-cell"
        >
          <button
            aria-label="Play episode: Test Episode Title"
            class="episode-title"
            type="button"
          >
            Test Episode Title
          </button>
        </td>
        <td
          class="date-column"
        >
          <time
            datetime=""
          >
            Unknown date
          </time>
        </td>
        <td
          class="duration-column"
        >
          00:00:00
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
